--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#our-beginning">Our Beginning</a></li>
-                <li><a href="#features">Featureaaaaaaaaas</a></li>
+                <li><a href="#features">Featurex</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
             </ul>
         </nav>
